fixed some of the CSS and fixed some of the image jump issues

--- a/src/main/resources/META-INF/web-resources/stylesheets/styles.css
+++ b/src/main/resources/META-INF/web-resources/stylesheets/styles.css
@@ -435,6 +435,12 @@ input[type="checkbox"].checkbox {
 	display: none;
 }
 
+.loading {
+	opacity: 0.4;
+	filter: alpha(opacity = 40); /* msie */
+	background-color: #000;
+}
+
 #col-width {
 	background: url("../images/SVG/col-width.svg") no-repeat;
 }
