--- a/src/main/resources/META-INF/web-resources/stylesheets/todo.css
+++ b/src/main/resources/META-INF/web-resources/stylesheets/todo.css
@@ -1,41 +1,46 @@
 .done-true {
-    text-decoration: line-through;
-    color: grey;
+	text-decoration: line-through;
+	color: grey;
 }
-li {list-style-type: none;}
-ul {padding-left: 20px;}
+
+li {
+	list-style-type: none;
+}
+
+ul {
+	padding-left: 20px;
+}
 
 .center {
-    text-align: center;
-    clear: both;
+	text-align: center;
+	clear: both;
 }
-
 
 .left {
-    float: left;
-    display: inline;
-    padding: 25px 50px
+	float: left;
+	display: inline;
+	padding: 25px 50px
 }
+
 .right {
-    float: right;
-    display: inline;
+	float: right;
+	display: inline;
 }
 
 .box {
-    float: left;
-    display: inline;
-    padding: 5px 10px;
-    margin: 5px 5px;
-
-    border-style: solid;
-    border-width: 1px;
+	float: left;
+	display: inline;
+	padding: 5px 10px;
+	margin: 5px 5px;
+	border-style: solid;
+	border-width: 1px;
 }
 
 .scrolly {
-    overflow-x: auto;
+	overflow-x: auto;
 }
 
-#loading {
+/* #loading {
   width: 1064px;
   height: 500px;
   display: block;
@@ -43,8 +48,11 @@ ul {padding-left: 20px;}
   background-color: #fff;
   z-index: 99;
   text-align: center;
-}
+} */
 
-#loading-image {
-  z-index: 100;
+.loading-image {
+	position: relative;
+	z-index: 2;
+	top: 250px;
+	/* left: 500px; */
 }
